--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 rootProject.name = 'kodilla-course'
 include 'kodilla-intro'
 include 'kodilla-basic-tests'
-
+include 'kodilla-collections'
+include 'kodilla-collections-advanced'
+include 'kodilla-stream'
+include 'kodilla-advanced-tests'
 
