--- a/kodilla-selenium/build.gradle
+++ b/kodilla-selenium/build.gradle
@@ -11,4 +11,7 @@ repositories {
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     testImplementation group: 'junit', name: 'junit', version: '5.3'
+    implementation group: 'com.testautomationguru.ocular', name: 'ocular', version: '1.0.0.Alpha'
+
+
 }
